# MakingRobotModel

./: README.md  setup.bash
models/my_arm_robot/: model.sdf  model.urdf
models/t1_robot/: Body.stl  model.config  model.sdf
src/crawler_plugin_and_controller/: CMakeLists.txt  package.xml
src/crawler_plugin_and_controller/src/: crawler_robot_1DEG.cc  robot_teleop.cc
src/gazebo_plugin_tutorial/: CMakeLists.txt  CMakeLists.txt~  hello.world  hello.world~  package.xml  package.xml~
src/my_arm_robot/: CMakeLists.txt  package.xml  setup.py
src/my_arm_robot/launch/: empty.launch  make_robot_description_and_call_state_publisher.launch  my_arm_robot.launch  teleop_joy.launch
src/my_arm_robot/src/: my_arm.cpp  my_arm.h  teleop_joy.cpp
src/my_arm_robot/worlds/: my_arm_robot.world
src/mydiffdriveplugin/: CMakeLists.txt  package.xml
src/mydiffdriveplugin/src/: DiffDrivePlugin.cc  DiffDrivePlugin.hh
src/worlds/: t1_robot_exp1.world
